--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/material-design-lite/material.min.css">
-    <link rel="stylesheet" href="app/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 
 
   </head>
@@ -17,6 +17,6 @@
 
 
   </body>
-  <script type="text/javascript" src="app/script/all.js"></script>
-  <script type="text/javascript" src="app/script/vendors.min.js"></script>
+  <script type="text/javascript" src="script/all.js"></script>
+  <script type="text/javascript" src="script/vendors.min.js"></script>
 </html>
